style.css
/* ... */
	/** LOGO */
		#logo {
			float: left;
			line-height: 1;
			margin-bottom: 0;
			width: 18vw;
		}

		#logo h1 a:link, #logo h1 a:visited, #logo h1 a:active {
			font-size: 2.4rem;
			font-style: italic;
			line-height: 1;
			margin: 0;
			padding: 0;
			text-decoration: none;
		}

		#logo h1 a:hover { }

	/** NAVIGATION */
		#st-trigger-effects {
			display: none;
		}

		#nav ul {
			display: -ms-flexbox;
			display: -webkit-flex;
			-js-display: flex;
			display: flex;
			-webkit-flex-wrap: wrap;
			-ms-flex-wrap: wrap;
			flex-wrap: wrap;
			-webkit-justify-content: right;
			-ms-flex-pack: right;
			justify-content: right;
			float: right;
			font-size: 1.2rem;
			margin: 0 0 1em;
			padding: 0;
			width: 70vw;
		}

		#nav li { padding: 0 10px; }

		#nav li a:link, #nav li a:visited, #nav li a:active {
			align-items: flex-start;
			color: var(--blue-sapphire);
			font-weight: 600;
			text-align: center;
			text-decoration: none;
		}

		#nav li a:hover, #nav li.current_page_item a, #nav li.current-page-ancestor a {
			color: var(--silver-chalice);
		}

		/** SUCKERFISH DROPDOWNS */
			#nav li ul { /* second-level lists */
				background: #fff;
				border: 1px solid #333 !important;
				-webkit-flex-direction: column;
				-ms-flex-direction: column;
				flex-direction: column;
				left: -999em; /* using left instead of display to hide menus because display: none isn't read by screen readers */
				margin: 0 !important;
				position: absolute;
				width: 10em;
			}

			#nav li ul li a:link, #nav li ul li a:visited, #nav li ul li a:active {
				background: transparent;
				color: #007ac9;
				display: block;
				font-size: 1em;
				height: auto !important;
				width: 10em;
			}

			#nav li ul li a:hover {
				background: #007ac9;
				color: #fff;
			}

			#nav li:hover ul, #nav li.sfhover ul { /* lists nested under hovered list items */
				left: auto;
			}

/** CONTENT */
	/** HOMEPAGE CONTENT */
		#content.home {
			-webkit-flex: 0 1 100%;
			-ms-flex: 0 1 100%;
			flex: 0 1 100%;
		}

		.post.homepost {
			border-bottom: 1px solid #ababab;
			border-left: 1px solid #ababab;
			border-radius: 10px;
			border-top-left-radius: 0;
			border-bottom-right-radius: 0;
			float: left;
			margin: 0 0 40px;
			padding: 0 10px;
			width: 75%;
		}

		.post.homepost.even {
			border-bottom: 1px solid #ababab;
			border-left: none;
			border-right: 1px solid #ababab;
			border-radius: 10px;
			border-top-right-radius: 0;
			border-bottom-left-radius: 0;
			float: right;
			padding: 0 10px;
		}

		.content .homemeta {
			border: none;
			color: var(--silver-chalice);
			font-size: .85rem;
			font-style: italic;
			line-height: 1.25em;
			margin-bottom: 1em;
			padding: 0;
		}

	#content {
		-webkit-flex: 0 1 80%;
		-ms-flex: 0 1 80%;
		flex: 0 1 80%;
	}

	.content .featured {
		color: #666;
		font-size: 0.62rem;
		font-weight: 500;
		letter-spacing: 0.1em;
		line-height: 2.6em;
		text-transform: uppercase;
	}

	.content .post {  }

	.content .odd { }

	.content .even { }

	.content .postmeta {
		border: 1px solid var(--silver-chalice);
		border-left: none;
		border-right: none;
		line-height: 1.4em;
		margin-bottom: 1em;
		padding: .5em;
	}

	.breadcrumbs {
		border-bottom: 1px solid #ababab;
		border-left: 1px solid #ababab;
		border-radius: 10px;
		border-top-left-radius: 0;
		border-bottom-right-radius: 0;
		margin: 0 0 40px;
		padding: 0 10px;
	}

	/** PORTFOLIO STYLES */
		.projitem {
			border-bottom: 1px solid #ababab;
			border-left: 1px solid #ababab;
			border-radius: 10px;
			border-top-left-radius: 0;
			border-bottom-right-radius: 0;
			float: left;
			margin: 0 0 40px;
			padding: 0 10px;
			width: 75%;
		}

		.projitem.even {
			border-bottom: 1px solid #ababab;
			border-left: none;
			border-right: 1px solid #ababab;
			border-radius: 10px;
			border-top-right-radius: 0;
			border-bottom-left-radius: 0;
			float: right;
			padding: 0 10px;
		}

		.projimg {
			float: left;
			width: 25%;
		}

		.projimg img {
			height: auto;
			max-width: 100%;
		}

		.projinfo {
			float: right;
			width: 70%;
		}

		.project p {
			margin-bottom: 1.5em;
		}

		.project table, .project table td {
			border: 1px solid var(--silver-chalice);
			border-collapse: collapse;
		}

		.project table td {
			padding: 0 8px;
		}

	.navigation {
		float: left;
		padding: 1em;
		width: 100%;
	}

	/** RESPONSIVE EMBEDS */
		.embed { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
		.embed iframe, .embed object, .embed embed, .embed video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }


	/** GALLERY STYLES */
		.content img.attachment-thumbnail {
			border: none;
			height: 92px;
			margin: 0;
			padding: 0;
			width: 92px;
		}

		.gallery {
			margin: auto;
			/* gallery clearing */
			overflow: hidden;
			width: 100%;
		}

		.gallery .gallery-item {
			float: left;
			margin-top: 10px;
			text-align: center;
		}

		.gallery img { border: 2px solid #cfcfcf; }

		.gallery .gallery-caption { margin-left: 0; }

		.gallery br { clear: both }

		/* Available Columns */
		.col-2 { width: 50% }
		.col-3 { width: 33.333% }
		.col-4 { width: 25% }
		.col-5 { width: 20% }
		.col-6 { width: 16.666% }
		.col-7 { width: 14.285% }
		.col-8 { width: 12.5% }
		.col-9 { width: 11.111% }

	/** PAGE BAR NAV STYLING */
		.pb-nav {
			clear: both;
			margin: 0 auto;
			max-width: 75%;
			text-align: center;
		}

		.pb-nav a, .pb-nav span {
			text-decoration: none;
			border: 1px solid var(--silver-chalice);
			border-top: none;
			border-radius: 10px;
			padding: 3px 5px;
			margin: 2px;
		}


		.pb-nav a.page-numbers, .pb-nav span.page-numbers {
			border-left: none;
			border-right: none;
			border-bottom-left-radius: 0;
			border-bottom-right-radius: 0;
		}

		.pb-nav span.pages {
			border-right: none;
			border-bottom-right-radius: 0;
			border-top-left-radius: 0;
			padding: 3px 5px 3px 10px;
		}
/* ... */

